kubernetes/apps/networking/external-services/homeassistantspain.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app homeassistantspain
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: ${HA_ES_IP}
  ports:
    - name: http
      port: &port 80
      protocol: TCP
      targetPort: *port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app homeassistantspain
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.${SECRET_DOMAIN}
    hajimari.io/icon: mdi:home-assistant
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: nginx
  rules:
    - host: &host ha_es.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 80
  tls:
    - hosts:
        - *host
