kubernetes/apps/networking/external-services/proxmox.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app proxmox
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: ${SERVICES_EXTERNAL_PROXMOX_IP}
  ports:
    - name: http
      port: &port 8006
      protocol: TCP
      targetPort: *port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app proxmox
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/whitelist-source-range: |
      10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
    # external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: nginx
  rules:
    - host: &host nucleus.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 8006
  tls:
    - hosts:
        - *host
