kubernetes/apps/networking/external-services/pterodactyl.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app pterodactyl
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: ${PTERODACTYL_DAEMON_IP}
  ports:
    - name: http
      port: &port 443
      protocol: TCP
      targetPort: *port
    - name: apiuber
      port: &port 4567
      protocol: TCP
      targetPort: *port
    - name: dynmap
      port: &port 8123
      protocol: TCP
      targetPort: *port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app pterodactyl
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN}
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: nginx
  rules:
    - host: &host wings-ro.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 443
    - host: &host uber.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 4567
    - host: &host map.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 8123
  tls:
    - hosts:
        - *host
