kubernetes/apps/networking/external-services/router.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app router
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: ${ROUTER_IP}
  ports:
    - name: http
      port: &port 80
      protocol: TCP
      targetPort: *port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app router
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: |
      10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
    hajimari.io/appName: "Router Romania"
    hajimari.io/icon: mdi:router-network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: nginx
  rules:
    - host: &host router.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 80
  tls:
    - hosts:
        - *host
